Fixed layout issue for footer legal info.

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -52,6 +52,7 @@
     @media (min-width: 840px) {
       flex-basis: 100%;
       text-align: left;
+      margin-left: 0;
     }
 
     span:first-child {
